tests/NormalTests/paczka1/fuzzy1/56465804.err
Error in line 9: bSq4c A999 84,7
Error in line 23: AUw3LoGhUP A905 72,2
Error in line 31: Tt2Ñ A522 58,0
Error in line 19: Tt2w A905 56,1
